--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,40 @@
 {
-  "name": "server",
+  "name": "travel-agency-api",
   "version": "1.0.0",
+  "description": "API REST pour une agence de voyage - Gestion des destinations et réservations",
   "main": "server.js",
+  "keywords": [
+    "travel",
+    "agency",
+    "api",
+    "rest",
+    "express",
+    "nodejs",
+    "destinations",
+    "reservations"
+  ],
+  "author": "Votre Nom",
+  "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Ajoutez vos tests ici\" && exit 1",
+    "lint": "echo \"Ajoutez ESLint ici\"",
+    "format": "echo \"Ajoutez Prettier ici\"",
+    "docs": "echo \"Documentation disponible sur http://localhost:5000/api/docs\"",
+    "health": "curl http://localhost:5000/health",
+    "postinstall": "echo \"✅ Installation terminée. Utilisez 'npm run dev' pour démarrer le serveur.\""
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
