--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^7.6.0"
   },
   "dependencies": {
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "multer": "^2.0.1"
   }
 }
