--- a/package.json
+++ b/package.json
@@ -1,20 +1,51 @@
 {
-  "name": "travel-agency-app",
+  "name": "travel-agency-api",
   "version": "1.0.0",
-  "description": "Application web pour une agence de voyage",
+  "description": "API REST pour une agence de voyage - Gestion des destinations et réservations",
+  "main": "server.js",
+  "keywords": [
+    "travel",
+    "agency",
+    "api",
+    "rest",
+    "express",
+    "nodejs",
+    "destinations",
+    "reservations"
+  ],
+  "author": "Votre Nom",
+  "license": "MIT",
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd server && npm run dev",
-    "client": "cd client && npm start",
-    "install-all": "npm run install-server && npm run install-client",
-    "install-server": "cd server && npm install",
-    "install-client": "cd client && npm install"
-  },
-  "devDependencies": {
-    "concurrently": "^7.6.0"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "cross-env NODE_ENV=test DATABASE_URL=\"file:./test.db\" jest",
+    "test:watch": "cross-env NODE_ENV=test DATABASE_URL=\"file:./test.db\" jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test DATABASE_URL=\"file:./test.db\" jest --coverage",
+    "test:setup": "cross-env DATABASE_URL=\"file:./test.db\" npx prisma db push",
+    "test:reset": "cross-env DATABASE_URL=\"file:./test.db\" npx prisma migrate reset --force",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "joi": "^17.13.3",
-    "multer": "^2.0.1"
+    "@prisma/client": "^6.9.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "prisma": "^6.9.0",
+    "ts-node": "^10.9.2"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
