--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,8 @@
     "@prisma/client": "^6.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
